# deepstream-anpr-cpp

./: .gitignore  CMakeLists.txt  README.md
configs/: config_infer_plate_detector.txt  config_ocr.txt  source_rtsp.txt
include/: anpr_types.hpp  db_writer.hpp  event_manager.hpp  full_pipeline.hpp  metadata_probe.hpp  ocr_engine.hpp  pipeline_builder.hpp  plate_cropper.hpp  plate_postprocess.hpp
scripts/: build_engine.sh  export_yolo_to_onnx.py  run_rtsp.sh
src/: db_writer.cpp  event_manager.cpp  full_pipeline.cpp  main.cpp  metadata_probe.cpp  ocr_cli.cpp  ocr_engine.cpp  pipeline_builder.cpp  plate_cropper.cpp  plate_postprocess.cpp  yolo_plate_parser.cpp
